refactor(fed): federation watcher tests